--- a/Front End Assets/scss/_variables.scss
+++ b/Front End Assets/scss/_variables.scss
@@ -3,6 +3,7 @@
 // COLORS
 $black: #231f20;
 $white: #ffffff;
+$lightest-gray: #f2f2f2;
 $light-grey: #b7c2c7;
 $light-blue: #72c2e6;
 $light-green: #9aedd8;
