--- a/Front End Assets/scss/modules/_home-hero.scss
+++ b/Front End Assets/scss/modules/_home-hero.scss
@@ -4,6 +4,12 @@
 .home-hero {
     @include clearfix;
 
+    .rif-book {
+        @media #{$media-desktop-view} {
+            margin-top:100px;
+        }
+    }
+
     .wrapper {
         @include make-md-column(10);
         @include make-md-column-offset(1);
