--- a/Front End Assets/scss/modules/_rif-book.scss
+++ b/Front End Assets/scss/modules/_rif-book.scss
@@ -17,3 +17,12 @@
         z-index: 10;
     }
 } 
+
+/* adjust the page title */
+h1.rif-book-margin-top {
+    margin-bottom:$v-spacing-sm;
+
+    @media #{$media-desktop-view} {
+        padding-top:90px;
+    }
+}
